Add A-Streams to TaskTracker
Update streams to use toList() instead of collect(Collectors.toList()).